deploy/cloud-deprecated/manifests/ingress-nginx/3-wildcard.yaml
# Copyright © 2022 sealos.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: cluster-issuer-cloud
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: nginx-cloud-sealos-io
  namespace: sealos
spec:
  rules:
    - host: cloud.sealos.io
      http:
        paths:
          - pathType: Prefix
            #@see: https://github.com/kubernetes/ingress-nginx/issues/3122#issuecomment-1125881703
            path: /()(.*)
            backend:
              service:
                name: desktop-frontend
                port:
                  number: 3000
          - pathType: Prefix
            path: /service/auth(/|$)(.*)
            backend:
              service:
                name: service-auth
                port:
                  number: 8080
  tls:
    - hosts:
        - 'cloud.sealos.io'
      secretName: wildcard-cloud-sealos-io-cert
