deploy/cloud-deprecated/manifests/ingress-nginx/side-login.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: login-sealos-io
  namespace: sealos
spec:
  rules:
    - host: login.sealos.io
      http:
        paths:
          - pathType: Prefix
            path: /()(.*)
            backend:
              service:
                name: casdoor
                port:
                  number: 8000
          - pathType: Prefix
            path: /cdn(/|$)(.*)
            backend:
              service:
                name: casdoor-local-cdn
                port:
                  number: 80
  tls:
    - hosts:
        - login.sealos.io
      secretName: login-sealos-io-cert
